// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title renders correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "Dosis-ExtraLight",
        "fontSize": 18,
        "fontWeight": "600",
        "marginBottom": 5,
      },
      undefined,
    ]
  }
>
  I am a title
</Text>
`;

exports[`Title renders correctly at small size 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "Dosis-ExtraLight",
        "fontSize": 16,
        "fontWeight": "500",
        "marginBottom": 5,
      },
      undefined,
    ]
  }
>
  I am a sub-title
</Text>
`;
